feat: aligned to business api filter
